<resources>
    <string name="app_name">ScanMySkin</string>
    <string name="scan">Scan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_back">Welcome back</string>
    <string name="log_in_to_your_account">Log in to your account</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="want_new_password">I want new password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="password">Password</string>
    <string name="password_must_not_be_empty">Password entry must not be empty!</string>
    <string name="password_wrong_format">Password must be at least 8 characters long, containing at least 1 upper case and special character</string>
    <string name="password_must_match">Password must match!</string>
    <string name="password_changed">Password changed successfully!</string>
    <string name="email_for_password_reset">We have sent you an email.</string>
    <string name="email">Email</string>
    <string name="choose_password">Choose your password</string>
    <string name="make_sure_remember">Make sure you remember this time!</string>
    <string name="confirm">Confirm</string>
    <string name="log_in">Log in</string>
    <string name="register">Register</string>
    <string name="cant_remember">Can\'t remember?</string>
    <string name="no_worries">No worries let’s get you a new one!</string>
    <string name="create_new_account">Create your new account.</string>
    <string name="create_my_account">Create my account</string>
    <string name="create_account">Create account</string>
    <string name="put_info">Put your info in and lets go!</string>
    <string name="password_short">Password must contain more than 8 characters!</string>
    <string name="email_error">Invalid email format.</string>
    <string name="invalid_credentials">Wrong email or password</string>
    <string name="registered_successfully">Registered successfully!</string>
    <string name="user_added_to_database">User added to database</string>
    <string name="account_deleted">Account deleted.</string>
    <string name="please_wait">Please wait…</string>
    <string name="info">Info</string>
    <string name="history">History</string>
    <string name="permission_denied">permissions denied!</string>
    <string name="permission_granted">permissions granted!</string>
    <string name="permission_explanation">We need permissions for scanning images</string>
    <string name="permission_granted_already">permission granted already!</string>

        <string-array name="disease_titles">
            <item>Acne</item>
            <item>Actinic keratosis</item>
            <item>Basall cell carcinom</item>
            <item>Candida</item>
            <item>Eczema</item>
            <item>Herpes</item>
            <item>Lichen planus</item>
            <item>Lichen sclerosus</item>
            <item>Lupus</item>
            <item>Melanoma</item>
            <item>Pityriasis</item>
            <item>Psoriasis</item>
            <item>Rhus</item>
            <item>Rosacea</item>
            <item>Scabies</item>
            <item>Seborrheic dermatitis</item>
            <item>Seborrheic keratosis</item>
            <item>Tinea</item>
            <item>Vasculitis</item>
            <item>Vitiligo</item>
        </string-array>

        <string-array name="disease_descriptions">
            <item>Acne</item>
            <item>Actinic keratosis</item>
            <item>Basall cell carcinom</item>
            <item>Candida</item>
            <item>Eczema</item>
            <item>Herpes</item>
            <item>Lichen planus</item>
            <item>Lichen sclerosus</item>
            <item>Lupus</item>
            <item>Melanoma</item>
            <item>Pityriasis</item>
            <item>Psoriasis</item>
            <item>Rhus</item>
            <item>Rosacea</item>
            <item>Scabies</item>
            <item>Seborrheic dermatitis</item>
            <item>Seborrheic keratosis</item>
            <item>Tinea</item>
            <item>Vasculitis</item>
            <item>Vitiligo</item>
        </string-array>


        <string-array name="acne_urls">
            <item>carURLS</item>
            <item>carURLS</item>
            <item>carURLS</item>
            <item>carURLS</item>
            <item>carURLS</item>
            <item>carURLS</item>
        </string-array>
        <string-array name="actinic_keratosis_urls">
            <item>carURLS</item>
            <item>carURLS</item>
            <item>carURLS</item>
            <item>carURLS</item>
            <item>carURLS</item>
            <item>carURLS</item>
        </string-array>
        <string-array name="basall_cell_carcinom_urls">
            <item>eczemaURLS</item>
            <item>eczemaURLS</item>
            <item>eczemaURLS</item>
            <item>eczemaURLS</item>
            <item>eczemaURLS</item>
            <item>eczemaURLS</item>
        </string-array>
        <string-array name="candida_urls">
            <item>melanomaURLS</item>
            <item>melanomaURLS</item>
            <item>melanomaURLS</item>
            <item>melanomaURLS</item>
            <item>melanomaURLS</item>
            <item>melanomaURLS</item>
        </string-array>
        <string-array name="eczema_urls">
            <item>melanomaURLS</item>
            <item>melanomaURLS</item>
            <item>melanomaURLS</item>
            <item>melanomaURLS</item>
            <item>melanomaURLS</item>
            <item>melanomaURLS</item>
        </string-array>
        <string-array name="herpes_urls">
            <item>carURLS</item>
            <item>carURLS</item>
            <item>carURLS</item>
            <item>carURLS</item>
            <item>carURLS</item>
            <item>carURLS</item>
        </string-array>
        <string-array name="lichen_planus_urls">
            <item>carURLS</item>
            <item>carURLS</item>
            <item>carURLS</item>
            <item>carURLS</item>
            <item>carURLS</item>
            <item>carURLS</item>
        </string-array>
        <string-array name="lichen_sclerosus_urls">
            <item>eczemaURLS</item>
            <item>eczemaURLS</item>
            <item>eczemaURLS</item>
            <item>eczemaURLS</item>
            <item>eczemaURLS</item>
            <item>eczemaURLS</item>
        </string-array>
        <string-array name="lupus_urls">
            <item>melanomaURLS</item>
            <item>melanomaURLS</item>
            <item>melanomaURLS</item>
            <item>melanomaURLS</item>
            <item>melanomaURLS</item>
            <item>melanomaURLS</item>
        </string-array>
        <string-array name="melanoma_urls">
            <item>melanomaURLS</item>
            <item>melanomaURLS</item>
            <item>melanomaURLS</item>
            <item>melanomaURLS</item>
            <item>melanomaURLS</item>
            <item>melanomaURLS</item>
        </string-array>
        <string-array name="pityriasis_urls">
            <item>carURLS</item>
            <item>carURLS</item>
            <item>carURLS</item>
            <item>carURLS</item>
            <item>carURLS</item>
            <item>carURLS</item>
        </string-array>
        <string-array name="psoriasis_urls">
            <item>carURLS</item>
            <item>carURLS</item>
            <item>carURLS</item>
            <item>carURLS</item>
            <item>carURLS</item>
            <item>carURLS</item>
        </string-array>
        <string-array name="rhus_urls">
            <item>eczemaURLS</item>
            <item>eczemaURLS</item>
            <item>eczemaURLS</item>
            <item>eczemaURLS</item>
            <item>eczemaURLS</item>
            <item>eczemaURLS</item>
        </string-array>
        <string-array name="rosacea_urls">
            <item>melanomaURLS</item>
            <item>melanomaURLS</item>
            <item>melanomaURLS</item>
            <item>melanomaURLS</item>
            <item>melanomaURLS</item>
            <item>melanomaURLS</item>
        </string-array>
        <string-array name="scabies_urls">
            <item>melanomaURLS</item>
            <item>melanomaURLS</item>
            <item>melanomaURLS</item>
            <item>melanomaURLS</item>
            <item>melanomaURLS</item>
            <item>melanomaURLS</item>
        </string-array>
        <string-array name="seborrheic_dermatitis_urls">
            <item>carURLS</item>
            <item>carURLS</item>
            <item>carURLS</item>
            <item>carURLS</item>
            <item>carURLS</item>
            <item>carURLS</item>
        </string-array>
        <string-array name="seborrheic_keratosis_urls">
            <item>carURLS</item>
            <item>carURLS</item>
            <item>carURLS</item>
            <item>carURLS</item>
            <item>carURLS</item>
            <item>carURLS</item>
        </string-array>
        <string-array name="tinea_urls">
            <item>eczemaURLS</item>
            <item>eczemaURLS</item>
            <item>eczemaURLS</item>
            <item>eczemaURLS</item>
            <item>eczemaURLS</item>
            <item>eczemaURLS</item>
        </string-array>
        <string-array name="vasculitis_urls">
            <item>melanomaURLS</item>
            <item>melanomaURLS</item>
            <item>melanomaURLS</item>
            <item>melanomaURLS</item>
            <item>melanomaURLS</item>
            <item>melanomaURLS</item>
        </string-array>
        <string-array name="vitiligo_urls">
            <item>melanomaURLS</item>
            <item>melanomaURLS</item>
            <item>melanomaURLS</item>
            <item>melanomaURLS</item>
            <item>melanomaURLS</item>
            <item>melanomaURLS</item>
        </string-array>

        <array name="disease_urls">
            <item>@array/acne_urls</item>
            <item>@array/actinic_keratosis_urls</item>
            <item>@array/basall_cell_carcinom_urls</item>
            <item>@array/candida_urls</item>
            <item>@array/eczema_urls</item>
            <item>@array/herpes_urls</item>
            <item>@array/lichen_planus_urls</item>
            <item>@array/lichen_sclerosus_urls</item>
            <item>@array/lupus_urls</item>
            <item>@array/melanoma_urls</item>
            <item>@array/pityriasis_urls</item>
            <item>@array/psoriasis_urls</item>
            <item>@array/rhus_urls</item>
            <item>@array/rosacea_urls</item>
            <item>@array/scabies_urls</item>
            <item>@array/seborrheic_dermatitis_urls</item>
            <item>@array/seborrheic_keratosis_urls</item>
            <item>@array/tinea_urls</item>
            <item>@array/vasculitis_urls</item>
            <item>@array/vitiligo_urls</item>
        </array>
</resources>