<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftGuideline"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintGuide_begin="24dp"
        android:orientation="vertical">
    </androidx.constraintlayout.widget.Guideline>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightGuideline"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintGuide_end="24dp"
        android:orientation="vertical">
    </androidx.constraintlayout.widget.Guideline>

    <TextView
        android:id="@+id/welcomeTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cant_remember"
        style="@style/TextAppearance.Title"
        android:layout_marginTop="@dimen/margin_very_large"
        app:layout_constraintLeft_toLeftOf="@id/leftGuideline"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/welcomeDescriptionTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_worries"
        android:layout_marginTop="@dimen/margin_medium"
        android:textColor="@color/description_color"
        app:layout_constraintLeft_toLeftOf="@id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@id/welcomeTv"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInputLayout"
        style="@style/myOutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/leftGuideline"
        app:layout_constraintRight_toLeftOf="@id/rightGuideline"
        app:layout_constraintTop_toBottomOf="@id/welcomeDescriptionTv"
        android:layout_marginTop="@dimen/margin_huge"
        app:startIconTint="@color/black"
        android:hint="@string/email"
        android:textColorHint ="@color/gray"
        app:boxStrokeWidth="0dp"
        app:boxBackgroundColor="@color/box_background"
        android:enabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/reset"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintLeft_toRightOf="@id/leftGuideline"
        app:layout_constraintRight_toLeftOf="@id/rightGuideline"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/margin_very_large"
        android:background="@drawable/blue_button"
        android:text="@string/want_new_password"
        style="@style/blue_button"
        />

</androidx.constraintlayout.widget.ConstraintLayout>