<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftGuideline"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/margin_medium"></androidx.constraintlayout.widget.Guideline>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightGuideline"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/margin_medium"></androidx.constraintlayout.widget.Guideline>

    <TextView
        android:id="@+id/welcomeTv"
        style="@style/TextAppearance.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_very_large"
        android:text="@string/create_new_account"
        app:layout_constraintLeft_toLeftOf="@id/leftGuideline"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcomeDescriptionTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/put_info"
        android:textColor="@color/description_color"
        app:layout_constraintLeft_toLeftOf="@id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@id/welcomeTv" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInputLayout"
        style="@style/myOutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_huge"
        android:enabled="true"
        android:hint="@string/email"
        android:textColorHint="@color/gray"
        app:boxBackgroundColor="@color/box_background"
        app:boxStrokeWidth="0dp"
        app:layout_constraintLeft_toRightOf="@id/leftGuideline"
        app:layout_constraintRight_toLeftOf="@id/rightGuideline"
        app:layout_constraintTop_toBottomOf="@id/welcomeDescriptionTv"
        app:startIconTint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInputLayout"
        style="@style/myOutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:enabled="true"
        android:hint="@string/password"
        android:textColorHint="@color/gray"
        app:boxBackgroundColor="@color/box_background"
        app:boxStrokeWidth="0dp"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/title_black"
        app:layout_constraintLeft_toRightOf="@id/leftGuideline"
        app:layout_constraintRight_toLeftOf="@id/rightGuideline"
        app:layout_constraintTop_toBottomOf="@id/emailInputLayout"
        app:startIconTint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/poppins"
            android:inputType="textPassword"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/repeatPasswordInputLayout"
        style="@style/myOutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:enabled="true"
        android:hint="@string/repeat_password"
        android:textColorHint="@color/gray"
        app:boxBackgroundColor="@color/box_background"
        app:boxStrokeWidth="0dp"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/title_black"
        app:layout_constraintLeft_toRightOf="@id/leftGuideline"
        app:layout_constraintRight_toLeftOf="@id/rightGuideline"
        app:layout_constraintTop_toBottomOf="@id/passwordInputLayout"
        app:startIconTint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/repeatPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/poppins"
            android:inputType="textPassword"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/register"
        style="@style/blue_button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginBottom="@dimen/margin_very_large"
        android:background="@drawable/blue_button"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/leftGuideline"
        app:layout_constraintRight_toLeftOf="@id/rightGuideline" />

</androidx.constraintlayout.widget.ConstraintLayout>